--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "name": "create-nodejs-express-app",
-  "version": "1.7.0",
-  "description": "Create a Node.js app for building production-ready RESTful APIs using Express, by running one command",
+  "name": "backend-vlsn",
+  "version": "2.0.0",
+  "description": "VLSN backend",
   "bin": "bin/createNodejsApp.js",
   "main": "src/index.js",
   "repository": "https://github.com/hagopj13/node-express-boilerplate.git",
-  "author": "Hagop Jamkojian <hagopj13@gmail.com>",
+  "author": "Zennomi <ngdatuananh@gmail.com>",
   "license": "MIT",
   "engines": {
     "node": ">=12.0.0"
   },
   "scripts": {
-    "start": "pm2 start ecosystem.config.json --no-daemon",
+    "start": "node src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "test": "jest -i --colors --verbose --detectOpenHandles",
-    "test:watch": "jest -i --watchAll",
-    "coverage": "jest -i --coverage",
-    "coverage:coveralls": "jest -i --coverage --coverageReporters=text-lcov | coveralls",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prettier": "prettier --check **/*.js",
-    "prettier:fix": "prettier --write **/*.js",
-    "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
-    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
-    "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up",
-    "prepare": "husky install"
+    "redis": "redis-server",
+    "local": "concurrently \"npm run redis \" \"npm run dev\""
   },
   "keywords": [
     "node",
@@ -35,61 +25,52 @@
     "rest",
     "api",
     "mongodb",
-    "mongoose",
-    "es6",
-    "es7",
-    "es8",
-    "es9",
-    "jest",
-    "travis",
-    "docker",
-    "passport",
-    "joi",
-    "eslint",
-    "prettier"
+    "mongoose"
   ],
   "dependencies": {
+    "axios": "^0.25.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.10",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
+    "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.0.0",
+    "extract-domain": "^2.4.1",
+    "firebase-admin": "^10.0.2",
     "helmet": "^4.1.0",
+    "html-entities": "^2.3.2",
     "http-status": "^1.4.0",
-    "joi": "^17.3.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mathml-to-latex": "^1.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
+    "rate-limit-redis": "^3.0.0",
+    "redis": "^4.0.2",
+    "shortid": "^2.2.16",
+    "showdown": "^1.9.1",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
+    "turndown": "^7.1.1",
+    "uuid": "^8.3.2",
     "validator": "^13.0.0",
-    "winston": "^3.2.1",
+    "winston": "^3.5.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "concurrently": "^7.0.0",
     "coveralls": "^3.0.7",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^24.0.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-security": "^1.4.0",
     "faker": "^5.1.0",
-    "husky": "^7.0.0",
-    "jest": "^26.0.1",
-    "lint-staged": "^11.0.0",
     "node-mocks-http": "^1.8.0",
-    "nodemon": "^2.0.0",
-    "prettier": "^2.0.5",
-    "supertest": "^6.0.1"
+    "nodemon": "^2.0.0"
   }
 }
