--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Zennomi <ngdatuananh@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=12.0.0"
+    "node": "16.14.0"
   },
   "scripts": {
     "start": "node src/index.js",
