--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "html-entities": "^2.3.2",
     "http-status": "^1.4.0",
     "joi": "^17.6.0",
+    "js-base64": "^3.7.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mathml-to-latex": "^1.2.0",
